# cultivationdev

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/config/: cfg.py
app/core/: app_init.py
app/routes/: route_blueprints.py
app/routes/api/liveness/: liveness_routes.py
app/routes/api/readiness/: readiness_routes.py
conf/components/: start.sh  uwsgi.ini
