[tool.poetry]
name = "py-debian-poetry-flask-template"
version = "0.1.0"
description = "Poetry specification for library dependencies"
authors = ["Kyle Clark <cultivation.dev>"]

[tool.poetry.dependencies]
python = "~3.8"
Flask =  "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"